fix alignment icon in header

--- a/evergreen-front/src/components/Hero/Hero.css
+++ b/evergreen-front/src/components/Hero/Hero.css
@@ -13,6 +13,13 @@
 
 p.header-text {
     font-size: 2.0rem !important;
+    align-items: center;
+}
+
+p.header-text img {
+    vertical-align: middle;
+    height: 1.0em;
+    margin-bottom: 5px;
 }
 
 @media (min-width: 768px) {
